[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Jade Mackay <jademackay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
geopandas = "^0.12.2"
pandas = "^2.0.1"
shapely = "^2.0.1"
folium = "^0.14.0"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
openmatrix = "^0.3.5.0"
pyyaml = "^6.0"
dask = "^2023.4.0"
distributed = "^2023.4.0"
tqdm = "^4.65.0"
scipy = "^1.10.1"
ipfn = "^1.4.4"
pyarrow = "^11.0.0"
protobuf = "^4.22.3"
matsim-tools = "^0.0.14"
pygeos = "^0.14"
dvc = "^2.55.0"
dvc-s3 = "^2.22.0"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
